--- a/index.html
+++ b/index.html
@@ -6,45 +6,49 @@
     <title>The Arcade</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <script defer src="../scripts/index.js"></script> 
 </head>
-
 
 <body>
 
     <header>
-        <h1>The Arcade</h1>
-        <a href="login.html" class="login-btn">Login</a>
+        <section class="header-container">
+            <h1>The Arcade</h1>
+            <a href="../login.html" class="login-btn">Login</a>
+        </section>
     </header>
 
     <main>
        <section class="welkomtext"> 
         <p>Welkom in onze arcade! Kies een game en verken de wereld...</p>
        </section> 
-        <section class="projects">
-            <div class="project fifa">
-                <img src="assets/images/fifa.webp" alt="Fifa">
+
+       <section class="projects">
+            <a href="../quiz.html" class="project fifa">
+                <img src="assets/index-img/fifa.webp" alt="Fifa">
                 <h2>Fifa</h2>
-            </div>
-             <div class="project">
-                <img src="assets/images/fortnite.avif" alt="Fortnite">
+            </a>
+            
+            <a href="#" class="project">
+                <img src="assets/index-img/fortnite.avif" alt="Fortnite">
                 <h2>Fortnite</h2>
-            </div>
-            <div class="project">
-                <img src="assets/images/legoMasters.jpeg" alt="LegoMasters">
+            </a>
+            <a href="#" class="project">
+                <img src="assets/index-img/legoMasters.jpeg" alt="LegoMasters">
                 <h2>LegoMasters</h2>
-            </div>
-            <div class="project">
-                <img src="assets/images/LOTR.jpg" alt="LOTR">
+            </a>
+            <a href="#" class="project">
+                <img src="assets/index-img/LOTR.jpg" alt="LOTR">
                 <h2>LOTR</h2>
-            </div>
-            <div class="project">
-                <img src="assets/images/MTG.png" alt="MTG">
+            </a>
+            <a href="#" class="project">
+                <img src="assets/index-img/MTG.png" alt="MTG">
                 <h2>MTG</h2>
-            </div>
-            <div class="project">
-                <img src="assets/images/pokemon.png" alt="Pokemon">
+            </a>
+            <a href="#" class="project">
+                <img src="assets/index-img/pokemon.png" alt="Pokemon">
                 <h2>Pokemon</h2>
-            </div>
+            </a>
         </section>
     </main>
 
