--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
     <header>
         <section class="header-container">
-            <h1>The Arcade</h1>
+            <h1 class="arcade-title">The Arcade</h1>
             <a href="../login.html" class="login-btn">Login</a>
         </section>
     </header>
 
     <main>
-       <section class="welkomtext"> 
-        <p>Welkom in onze arcade! Kies een game en verken de wereld...</p>
-       </section> 
+        <section class="welkomtext"> 
+            <p class="index-welcome-text">Welkom in onze arcade! Kies een game en verken de wereld...</p>
+        </section> 
 
        <section class="projects">
             <a href="../quiz.html" class="project fifa">
