--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <script defer src="../scripts/index.js"></script> 
+
 </head>
 
 <body>
 
-    <header>
+    <header class="header-index">
         <section class="header-container">
             <h1 class="arcade-title">The Arcade</h1>
             <a href="../login.html" class="login-btn">Login</a>
